--- a/src/app/example-page1/example-page1.component.html
+++ b/src/app/example-page1/example-page1.component.html
@@ -1,2 +1,7 @@
 <h1> Example 1 </h1>
-<button nzButton></button>
+<p> Below are some antd Buttons </p>
+<button nz-button nzType="primary">Primary Button</button>
+<button nz-button nzType="default">Default Button</button>
+<button nz-button nzType="dashed">Dashed Button</button>
+<button nz-button nzType="text">Text Button</button>
+<a nz-button nzType="link">Link Button</a>
