--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,11 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
-
 <h1> Routing </h1>
-<ul>
+<app-navbar></app-navbar>
+<!-- <ul>
   <li><a routerLink="/example1"> Example 1</a></li>
   <li><a routerLink="/example2"> Example 2</a></li>
   <li><a routerLink="/"> Home </a></li>
   <li><a routerLink="/some-page"> Not Found </a></li>
-</ul>
+</ul> -->
 
 <h2> Content in this box depend on route </h2>
 <div style="border: 2px solid red;">
