--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 <h1> SMALL URL </h1>
-<app-navbar></app-navbar>
-<!-- <ul>
-  <li><a routerLink="/example1"> Example 1</a></li>
-  <li><a routerLink="/example2"> Example 2</a></li>
-  <li><a routerLink="/"> Home </a></li>
-  <li><a routerLink="/some-page"> Not Found </a></li>
-</ul> -->
-
-<h2> Content in this box depend on route </h2>
-<div style="border: 2px solid red;">
+<div>
+  <app-navbar></app-navbar>
+</div>
+<!-- <h2> Content in this box depend on route </h2> -->
+<!-- <div style="border: 2px solid red;"> -->
+<div>
   <router-outlet></router-outlet>
 </div>
