--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <ul nz-menu nzMode="horizontal">
-    <li nz-menu-item nzSelected><a routerLink="/example1"> Example 1</a></li>
-    <li nz-menu-item nzSelected><a routerLink="/example2"> Example 2</a></li>
-    <li nz-menu-item nzSelected><a routerLink="/"> Home </a></li>
-    <li nz-menu-item nzSelected><a routerLink="/some-page"> Not Found </a></li>
+    <li nz-menu-item><a routerLink="/register"> Register</a></li>
+    <li nz-menu-item><a routerLink="/login"> Login</a></li>
+    <li nz-menu-item><a routerLink="/dashboard"> Dashboard </a></li>
+    <!-- <li nz-menu-item><a routerLink="/some-page"> Not Found </a></li> -->
 </ul>
