--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<h1> SMALL URL </h1>
-<div>
-  <app-navbar></app-navbar>
+<div [className]="'top'">
+  <h1> SMALL URL </h1>
+  <div>
+    <app-navbar></app-navbar>
+  </div>
 </div>
-<!-- <h2> Content in this box depend on route </h2> -->
-<!-- <div style="border: 2px solid red;"> -->
 <div>
   <router-outlet></router-outlet>
 </div>
