--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,7 @@
-<p>dashboard-page works!</p>
+<!-- <p>dashboard-page works!</p> -->
+<div nz-row [className]="'dashboardContainer'">
+    <div nz-col nzSpan="8" [className]="'dashboardLeft'">
+        <button nz-button nzType="primary" nzBlock>CREATE A NEW LINK</button>
+    </div>
+    <div nz-col nzSpan="16" [className]="'dashboardRight'"></div>
+</div>
