--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~ng-zorro-antd/ng-zorro-antd.min.css";
 
+.top{
+    // background-color: pink;
+    height: 110px;
+    // border: solid red;
+}
