dashboard: url list

--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -5,6 +5,7 @@
         <!-- <button nz-button nzType="primary" nzBlock (click)="showCreateForm()">CREATE A NEW LINK</button> -->
     </div>
     <div nz-col nzSpan="18" [className]="'dashboardRight'">
+        <app-link-list></app-link-list>
         <!-- <app-create-form></app-create-form> -->
     </div>
 </div>
