--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -9,13 +9,15 @@
     height: inherit;
     // padding: 10px;
     padding: 30px;
-    border-right :solid #F0F0F0 2px;
+    border-right :solid #F0F0F0 1px;
     // border-right: 3px;
 }
 .dashboardRight{
-    // background-color: white;
-    background-color: #FBFBFB;
+    background-color: white;
+    // background-color: #FBFBFB;
     height: inherit;
+    padding: 20px;
+
 }
 .class{
     background-color: pink;
