--- a/src/app/link-list/link-list.component.html
+++ b/src/app/link-list/link-list.component.html
@@ -1,1 +1,11 @@
-<p>link-list works!</p>
+<div div nz-col nzSpan="24" [className]="'itemBox'"> 
+    <h2>Title</h2>
+    <p [className]="'greyTxt'">Old URL</p>
+    <p [className]="'blueTxt'">New URL</p>
+</div>
+
+<div div nz-col nzSpan="24" [className]="'itemBox'"> 
+    <h2>Title</h2>
+    <p [className]="'greyTxt'">Old URL</p>
+    <p [className]="'blueTxt'">New URL</p>
+</div>
