finish short url features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div [className]="'top'">
-  <h1> SMALL URL </h1>
+  <h1 (click)="onTitleClick()" class="hover-link"> SMALL URL </h1>
   <div>
     <app-navbar></app-navbar>
   </div>
